# OpencvTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/user1/opencvtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/user1/opencvtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/user1/opencvtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
